--- a/decode.html
+++ b/decode.html
@@ -20,13 +20,13 @@
     <div class="column">
     <div class="card dc">
     <div id="original" class="half">
-        <div id="stego" class="half">
+        <div id="stego">
             Encoded Image:
             <img id="img" src=" "/>
         </div>
     </div>
     <div>
-        <input id="file" type="file">
+        <input id="file" type="file" class="fileStyle">
         <div id="pass">
             Enter Password <input id="key" type="password" placeholder="enter passsword" />
         </div>
@@ -40,14 +40,19 @@
         <div id="message"></div>
     </div>
 </div>
-<div>Message:</div>
-<textarea readonly id="text"></textarea>
-<div class="btn rl">
-    <button id="reload" class="btnStyle">Clear Data</button>
 </div>
 </div>
+<div class="column">
+    <div class="card dc">
+    <div>Message:</div>
+    <textarea readonly id="text"></textarea>
+    <div class="btn rl">
+        <button id="reload" class="btnStyle">Clear Data</button>
+    </div>
+    </div>
+    </div>
 </div>
-</div>
+
 <footer>
     Steganography Project
 </footer>
