--- a/decode.html
+++ b/decode.html
@@ -8,10 +8,10 @@
     <title>Steganography</title>
 </head>
 <body>
-    <header class="header">
+    <div class="header">
         <div class="column stega">Stega</div>
         <div class="column hub">Hub</div>
-    </header>
+    </div>
     <div class="header2">
         <a href="index.html"><button class="btnEncode">Encode</button></a>
         <a href="decode.html"><button class="btnDecode">•Decode</button></a>
